--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="card mb-5 shadow-sm">
               <div class="card-body">
                 <div class="card-title">
-                  <h2>This is Title</h2>
+                  <h2>This is titile</h2>
                 </div>
                 <div class="card-text">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas eius asperiores aperiam temporibus laudantium eos cumque possimus voluptates earum.</p>
@@ -125,6 +125,8 @@
           </div>
         </div>
       </div>
+ 
+
 
 
 
