--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Hello, world!</title>
+    <title>Blogger Form</title>
   </head>
   <body>
 
